[workspace]
resolver = "2"
members = ["crates/reed-ir", "crates/readers/*", "crates/writers/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/reed"

[workspace.dependencies]
rhizome-reed-ir = { path = "crates/reed-ir" }
rhizome-reed-read-lua = { path = "crates/readers/reed-read-lua" }
rhizome-reed-read-ts = { path = "crates/readers/reed-read-ts" }
rhizome-reed-write-lua = { path = "crates/writers/reed-write-lua" }
rhizome-reed-write-ts = { path = "crates/writers/reed-write-ts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
