[package]
name = "rhizome-reed-sexpr"
description = "S-expression serialization for reed IR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-reed-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
