[package]
name = "rhizome-reed-read-ts"
description = "TypeScript reader for reed IR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-reed-ir.workspace = true
thiserror.workspace = true
tree-sitter = "0.25"
arborium-typescript = "2.7"
